# rubin-alert

./: CLAUDE.md  README.md  alert2json.py  pyproject.toml
notebooks/: view_alerts.ipynb
src/rubin_alert_utils/: alert2json.py
